--- a/09_Utilties/4_Editor/02_vscode/02.vscode.md
+++ b/09_Utilties/4_Editor/02_vscode/02.vscode.md
@@ -1,68 +1,146 @@
 ## 前面的话
 
-自接触编程以来，编辑器使用过程： vim --> sublime --> webstorm --> sublime --> atom --> sublime --> stom --> vscode   
+自接触编程以来，编辑器使用过程： vim --> sublime --> webstorm --> sublime --> atom --> sublime --> stom --> vscode
 
-vim 配置成本太高，更重要的是最后也不能选到自己喜欢的主题配色；webstorm 太过笨重；sublime 轻量、性能好、主题配色也令人满意，但在含有注释的文本中自动缩进一直不对（bug？），这点绝对不能认，除此之外，sublime 语法高亮相对 atom 和 vscode 也不够智能，比如不能区分 ES6 的某些关键词，markdown编辑有些鸡肋。   
+vim 配置成本太高，更重要的是最后也不能选到自己喜欢的主题配色；webstorm 太过笨重；sublime 轻量、性能好、主题配色也令人满意，但在含有注释的文本中自动缩进一直不对（bug？），这点绝对不能认，除此之外，sublime 语法高亮相对 atom 和 vscode 也不够智能，比如不能区分 ES6 的某些关键词，markdown 编辑有些鸡肋。
 
-上述几个编辑器的问题，atom 和 vscode 基本都解决了，最后基本就在 atom 和 vscode 之间纠结，最开始一直用 atom 但最终还是选择了 vscode，原因是 atom 有时会卡顿，这点不能忍，尤其在电脑没有连接电源的时候简直抓狂（8小时内如果出现3次以上卡顿就属于不能忍的程度了，内存占用高就忍了），并且我现在的电脑可以 2017款 MacBook pro 256 SSD硬盘/8G 内存，要说配置低显然没说服力。   
+上述几个编辑器的问题，atom 和 vscode 基本都解决了，最后基本就在 atom 和 vscode 之间纠结，最开始一直用 atom 但最终还是选择了 vscode，原因是 atom 有时会卡顿，这点不能忍，尤其在电脑没有连接电源的时候简直抓狂（8 小时内如果出现 3 次以上卡顿就属于不能忍的程度了，内存占用高就忍了），并且我现在的电脑可以 2017 款 MacBook pro 256 SSD 硬盘/8G 内存，要说配置低显然没说服力。
 
-vscode关键是不会卡顿，其他插件、配色、快捷键和 atom 能基本一致，markdown 编辑略逊色于 atom，但够用。至于大文件编辑未测试。   
+vscode 关键是不会卡顿，其他插件、配色、快捷键和 atom 能基本一致，markdown 编辑略逊色于 atom，但够用。至于大文件编辑未测试。
 
-看到有对 vscode 和 atom 一个评价，感觉挺中肯：**atom 相当于 Firefox，而 vscode 类似于 chrome**。   
+看到有对 vscode 和 atom 一个评价，感觉挺中肯：**atom 相当于 Firefox，而 vscode 类似于 chrome**。
 
-## 坑  
+## 插件篇
 
-1. 有些快捷键只能在英文输入法状态下使用，比如调出 setting 面板、代码注释等。如果有时快捷键不能用了切换输入法试下。
-2. workspace 判断项目所在分支会错误，当在命令行中切换项目分支时很容易复现这个问题。现在（2017-11-19）都是只在一个窗口打开一个项目。 
+只安装必要的，不然，耗电量特别大。
 
-- 列选择： cmd + shift + 鼠标左键；cmd + alt + 上／下箭头;
+> 现在没放弃 atom 的原因就是 atom 虽然占用内存多，但是耗电量少。
 
-- setting自定义部分：   
+- atom keymap
+- atom one dark theme
+- eslint
+- markdown preview enhanced
+- markdown shortcuts
+- path intellisense 
+- prettier
+- vetur
+- open in browser
+
+## 坑
+
+1.  有些快捷键只能在英文输入法状态下使用，比如调出 setting 面板、代码注释等。如果有时快捷键不能用了切换输入法试下。
+2.  workspace 判断项目所在分支会错误，当在命令行中切换项目分支时很容易复现这个问题。现在（2017-11-19）都是只在一个窗口打开一个项目。
+
+- 列选择： ~~cmd + shift + 鼠标左键；cmd + alt + 上／下箭头;~~ 现在 vscode 原生支持列选择了。
+
+- setting 自定义部分：
 
 ```json
 {
-    "atomKeymap.promptV3Features": true,
-    "editor.multiCursorModifier": "ctrlCmd",
-    "editor.formatOnPaste": true,
-    "workbench.colorTheme": "One Dark Pro",
-    "editor.fontFamily": "Monaco, 'Courier New', monospace",
-    "editor.fontSize": 14,
-    "workbench.iconTheme": "material-icon-theme",
-    "editor.tabSize": 2,
-    "editor.detectIndentation": true,
-    "workbench.statusBar.visible": true,
-    "workbench.activityBar.visible": false,
-    "editor.wordSeparators": "`~!@#$%^&*()=+[{]}\\|;:'\",.<>/?",
-    "explorer.confirmDragAndDrop": false,
-    "vetur.validation.template": false,
+  // 样式相关
+  // "workbench.iconTheme": "material-icon-theme",
+  "workbench.colorTheme": "Atom One Dark",
+  "editor.fontFamily": "Monaco, 'Courier New', monospace",
+  "editor.fontSize": 14,
+  "editor.tabSize": 2,
+  "editor.detectIndentation": true,
+  "workbench.statusBar.visible": true,
+  "workbench.activityBar.visible": false,
+  "editor.wordSeparators": "`~!@#$%^&*()=+[{]}\\|;:'\",.<>/?",
+  "atomKeymap.promptV3Features": true,
+  "editor.multiCursorModifier": "ctrlCmd",
+  "explorer.confirmDragAndDrop": false,
+  "vetur.validation.template": false,
+  "workbench.startupEditor": "newUntitledFile",
+  "search.followSymlinks": false,
+  "editor.wordWrap": "on",
+  "window.zoomLevel": 0,
+  // 禁止 CommonJS module 提示报错，JS 检查用 eslint 就好了
+  "javascript.suggestionActions.enabled": false,
+  // Show Errors & Warnings on files and folder.
+  "problems.decorations.enabled": false,
+  // 粘贴，保存自动格式化（配合prettier）
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": false,
+  // 关闭默认 js 检查
+  "javascript.format.enable": false,
+  // 文件末尾插入新行
+  "files.insertFinalNewline": true,
+  // markdownlint config object
+  // "markdownlint.config": {
+  //     // 长度限制
+  //     "MD013": false,
+  //     // list 后必须有一个空格（和prettier自动格式化有冲突）
+  //     "MD030": false,
+  //     // 开头必须 h1
+  //     "MD002": false,
+  //     "MD041": false,
+  //     // 有序列表必须顺序排列并且中间不能有内容
+  //     "MD029": false,
+  //     // 不允许出现相同名字的标题，但不同层级应该允许
+  //     "MD024": false,
+  // },
+  // 开启 eslint 支持
+  "prettier.eslintIntegration": true,
+  "eslint.autoFixOnSave": false,
+  // 添加 vue 支持
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    {
+      "language": "vue",
+      "autoFix": true
+    }
+  ],
+  "vetur.format.defaultFormatter.html": "js-beautify-html"
 }
 ```
 
-## 自定义快捷键   
+update: 2018-06-27: 主题使用 "workbench.colorTheme": "Atom One Dark", 对应主题插件：atom one dark theme; 相比 one dark pro，高亮更友好，比如，系统自带运算符及 js 内建方法，使用的是绿色，但后者有些没有绿色显示，比如 `console.log` 中的 `log`
 
-首先将 atom 快捷键映射过来，其次，自定义部分，只有结合插件 `beautify` 进行自动缩进：   
+## 自定义快捷键
+
+首先将 atom 快捷键映射过来，其次，自定义部分，只有结合插件 `prettier` 进行自动缩进：
 
 ```json
-[{
-  "key": "cmd+alt+i",
-  "command": "HookyQR.beautify",
-  "when": "editorFocus"
-}]
+// Place your key bindings in this file to overwrite the defaults
+[
+  {
+    "key": "ctrl+alt+i",
+    "command": "HookyQR.beautify",
+    "when": "editorFocus"
+  },
+  {
+    "key": "ctrl+shift+b",
+    "command": "md-shortcut.toggleCodeBlock",
+    "when": "editorTextFocus && editorLangId == 'markdown'"
+  },
+  {
+    "key": "ctrl+shift+c",
+    "command": "md-shortcut.toggleInlineCode",
+    "when": "editorTextFocus && editorLangId == 'markdown'"
+  },
+  {
+    "key": "cmd+shift+/",
+    "command": "editor.action.blockComment",
+    "when": "editorTextFocus"
+  }
+]
 ```
 
 ## markdown
 
-写博客的时候习惯用 markdown 去写，sublime快捷键支持不好（有个收费版的插件不错？）、webstorm 太丑，atom 很顺手，但鉴于平时写代码开始使用 vscode，没理由只为了写 markdown 打开 atom，所以，配置 vscode 写 markdown 就迫在眉睫了。   
+写博客的时候习惯用 markdown 去写，sublime 快捷键支持不好（有个收费版的插件不错？）、webstorm 太丑，atom 很顺手，但鉴于平时写代码开始使用 vscode，没理由只为了写 markdown 打开 atom，所以，配置 vscode 写 markdown 就迫在眉睫了。
 
-试了 [markdown all in one](https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one)，安装量很大，有 150K (17-12-06) 之多，评价也在 5 星，但一直没配置好，快捷键无效。折腾了一段时间，放弃。   
+试了 [markdown all in one](https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one)，安装量很大，有 150K (17-12-06) 之多，评价也在 5 星，但一直没配置好，快捷键无效。折腾了一段时间，放弃。
 
-因为我是用 markdown 主要想使用常用快捷键，比如加粗，插入链接，代码块等，后来使用了 [markdown shortcus](https://marketplace.visualstudio.com/items?itemName=mdickin.markdown-shortcuts) 配置简单，快捷键够用。   
+因为我是用 markdown 主要想使用常用快捷键，比如加粗，插入链接，代码块等，后来使用了 [markdown shortcus](https://marketplace.visualstudio.com/items?itemName=mdickin.markdown-shortcuts) 配置简单，快捷键够用。
 
-如果遇到格式化表格的需求再另说。   
+如果遇到格式化表格的需求再另说。
 
 ## vue
 
-插件 vetur 新版对与 template 的格式检查特别恶心，标签中设计 vue 自定义属性必须换行，果断禁用这个检查：   
+插件 vetur 新版对与 template 的格式检查特别恶心，标签中设计 vue 自定义属性必须换行，果断禁用这个检查：
 
 ```json
 "vetur.validation.template": false,
