--- a/12_Computer_Basis/07_数据结构与算法分析/04.实现二叉搜索树.md
+++ b/12_Computer_Basis/07_数据结构与算法分析/04.实现二叉搜索树.md
@@ -88,6 +88,12 @@ this.inOrderTraverse = cb => {
 
 const _inOrderTraverseNode = (node, cb) => {
   if (node !== null) {
+    // 需要注意：：：！！！
+    // 这里可没有回调，而是顺序执行，也就是
+    // 只有左子树遍历完，才会执行 cb(node.key)
+    // 同步执行啊！所以先序/后序在中序基础上改动很小
+    // 这也说明：递归很容易理解啊
+    // 可以通过 chrome 断点工具查看
     _inOrderTraverseNode(node.left, cb);
     cb(node.key);
     _inOrderTraverseNode(node.right, cb);
@@ -179,11 +185,6 @@ function BinarySearchTree() {
   };
   const _inOrderTraverseNode = (node, cb) => {
     if (node !== null) {
-      // 记录遍历次数
-      if (!_inOrderTraverseNode.count) _inOrderTraverseNode.count = 0;
-      _inOrderTraverseNode.count++;
-      console.log("inOrderTraverseCount:", _inOrderTraverseNode.count);
-
       _inOrderTraverseNode(node.left, cb);
       cb(node.key);
       _inOrderTraverseNode(node.right, cb);
