--- a/11_杂项/04_Interview/09.箭头函数用法（主要this）.md
+++ b/11_杂项/04_Interview/09.箭头函数用法（主要this）.md
@@ -1,5 +1,13 @@
 # 箭头函数用法
 
+> update: 可以用执行上下文（作用域）来理解函数的调用过程以及 this 的指向：
+> 不管什么时候，函数调用时都会创建一个新的上下文（执行时创建上下文，定义时创建此法环境）；
+> 当函数发生调用时，当前执行上下文必须停止，并创建新的函数执行上下文来执行函数（JS 作用单线程的特点，同时，这样也使得递归在JS中执行过程很好理解）。当前函数执行完，销毁当前函数上下文，回到之前的上下文。可以用函数调用栈（执行上下文栈）来描述。
+> 而，this 就是代指当前函数的执行上下文，表示，可以访问哪些变量(及他们的值)
+> 所以，this 在函数执行时确定（除了箭头函数），本质上是函数执行的时候上下文才会创建。（但函数的作用域是函数定义时确定的）
+> 上下文和作用域是不同的概念：上下文是函数执行时确定的，而作用域是函数定义时确定的，与称之为词法环境。
+> 而 call,apply,bind等都是改变函数执行上下文，其中 bind 的优先级最高。
+
 箭头函数最大特点：箭头函数内部的 `this` 不能修改，在函数的整个生命周期内保持不变，和包裹箭头函数的第一个非箭头函数内部 `this` （上下文）相同。
 
 其他特点：
