--- a/11_杂项/04_Interview/11.原型链及闭包.md
+++ b/11_杂项/04_Interview/11.原型链及闭包.md
@@ -47,7 +47,7 @@ bar(); // 111
 1）正常来说，foo 内部的变量，在 foo 外部是访问不到的；
 2）正常来说，foo 执行完会被销毁。
 
-闭包的出现，使得上面两点没有发生。并且，被返回的函数是在定义时的此法作用域之外调用执行的。
+闭包的出现，使得上面两点没有发生。并且，被返回的函数是在定义时的词法作用域之外调用执行的。
 
 - 例2，函数作用参数
 
@@ -71,7 +71,7 @@ bar(f1); // 111
 
 ### 关于闭包定义
 
-闭包：一个函数（上面两例是被返回的函数）及函数声明时作用域中的变量组成的封闭气泡。
+闭包：一个函数（上面两例是被返回的函数）及函数声明时作用域中的变量组成的封闭气泡。一般是函数被返回或者作为参数传递时产生。
 
 ### 闭包的使用
 
