--- a/11_杂项/04_Interview/00.需要重复练习的知识/00.排序之快排.md
+++ b/11_杂项/04_Interview/00.需要重复练习的知识/00.排序之快排.md
@@ -1,6 +1,6 @@
 # 快排
 
-需要一个交换函数；需要一个划分求下一个pivot位置的过程；需要辅助递归函数.
+需要一个交换函数；需要一个划分求下一个 pivot 位置的过程；需要辅助递归函数.
 
 ## 代码实现
 
@@ -57,10 +57,10 @@ var quickSort = arr => {
 
   // 写成了 quick(arr, 0, array.lenth - 1)
   // 1. 变量写错，2，length 写错。。。
-  quick(arr, 0 , arr.length - 1);
+  quick(arr, 0, arr.length - 1);
 };
 
-var a = [6,5,4,26,5,34,2,3,44,3,2,144,22,6,76,66,88];
+var a = [6, 5, 4, 26, 5, 34, 2, 3, 44, 3, 2, 144, 22, 6, 76, 66, 88];
 quickSort(a);
 console.log(a);
 ```
