--- a/11_杂项/04_Interview/14.事件流模型及事件委托.md
+++ b/11_杂项/04_Interview/14.事件流模型及事件委托.md
@@ -1,5 +1,7 @@
 # 事件相关
 
+事件委托能够实现的本质在于 **事件在元素间的传递**，有捕获和冒泡两种模型，并且，在事件的传递过程中，事件对象的值不断发生变化，里面含有当前处理时间的元素的信息。通过事件对象的 `target` 属性，就可以获取到当前正在处理事件的元素，获取到元素后，就可以给其添加行为，就相当于给这个元素显式绑定事件一样。
+
 ## 事件定义
 
 - DOM0级： `on` + `eventName`，比如 `btn.onclick`;
