--- a/01_JavaScript/4_js算法题/01.多维数组降维.md
+++ b/01_JavaScript/4_js算法题/01.多维数组降维.md
@@ -51,6 +51,9 @@ d(arr);
  * 正确且普适的方法
  */
 
+// 通过默认参数可以减少很多代码，同时，这也说明，
+// 递归实际是原函数的子函数
+// 用函数调用栈来比较很好
 function d(arr, result = []) {
   arr.forEach(e => {
     if (Array.isArray(e)) {
@@ -92,6 +95,7 @@ d(arr);
  */
 
 function d(arr) {
+  // 这里的问题在于这个临时变量要跳出递归
   let result = [];
   arr.forEach(e => {
     if (Array.isArray(e)) {
