--- a/11_杂项/04_Interview/00.需要重复练习的知识/00.排序之快排.md
+++ b/11_杂项/04_Interview/00.需要重复练习的知识/00.排序之快排.md
@@ -1,5 +1,9 @@
 # 快排
 
+思路：划分递归，选一个元素，然后划分成两部分，左边的都小于这个元素，右边的都大于这个元素，然后不断递归，最终排好序。
+
+特点：原地排序，不稳定。
+
 需要一个交换函数；需要一个划分求下一个 pivot 位置的过程；需要辅助递归函数.
 
 ## 代码实现
@@ -15,7 +19,9 @@ var quickSort = arr => {
 
   // partition fn
   const partition = (array, left, right) => {
+    // 快排是原地排序，这里的 array 始终都是原始数组，left 和 right 会有变化
     const pivot = array[Math.floor((left + right) / 2)];
+    // left 和 right 是数组下标
     let l = left;
     let r = right;
 
@@ -34,7 +40,9 @@ var quickSort = arr => {
         r--;
       }
     }
-
+    
+    // 返回 l 是因为，结束后 l 左侧都是小于等于主元，而 l右侧（包括 l）都是大于等于主元，所以这是划分的过程
+    // 后面的迭代也是对划分后的数组进行迭代 
     return l;
   };
 
