--- a/11_杂项/04_Interview/26.http相关.md
+++ b/11_杂项/04_Interview/26.http相关.md
@@ -19,7 +19,7 @@
 
 ## http 优化相关
 
-- 长连接，keey-alive：同一 tcp 连接可以发送多个请求（浏览器有数量限制），减少简历tcp连接三次握手的耗时。但在同一连接上的多个请求还是同步进行的，且要等到一个请求完成后（收到响应）才可以发送另一个请求；
+- 长连接，keey-alive：同一 tcp 连接可以发送多个请求（浏览器有数量限制），减少简历 tcp 连接三次握手的耗时。但在同一连接上的多个请求还是同步进行的，且要等到一个请求完成后（收到响应）才可以发送另一个请求；
 - 管线化，pipelining，建立在长连接基础上，允许客户端一次发送多个请求（不用等到前一个请求响应回来，但，此时还是同步发送，一个一个来），减少发送请求的等待时间，但服务器还是要按照发送顺序返回响应，即，响应的处理还是同步的，实际管线化优化有限，所以浏览器默认也是关闭这项技术的，更多参考[线头阻塞](https://ye11ow.gitbooks.io/http2-explained/content/part2.html)；
-- http2，信道共用和分帧传输：信道指的是TCP连接通道，可以被同域名下的任意多个请求共用，即同域名下只要建立一个TCP连接就好了；同时一个请求-响应可以称之为 stream，流里面进行双向数据传输传送，其中，数据流的传送基于消息，一个消息由一个或多个帧组成，帧本身可以乱序发送，因为里面有标识属于哪个流，流本身没有独立的通道，是一个抽象概念，乱序分帧传输是实现并发请求的关键（最后的组装好像有独立的stream通道，实际发送过程并没有）。
-
+- http2，信道共用和分帧传输：信道指的是 TCP 连接通道，可以被同域名下的任意多个请求共用，即同域名下只要建立一个 TCP 连接就好了；同时一个请求-响应可以称之为 stream，流里面进行双向数据传输（请求-响应），其中，数据流的传送基于消息，一个消息由一个或多个帧组成，帧本身可以乱序发送，因为里面有标识属于哪个流，流本身不是独立的通道，是一个抽象概念，乱序分帧传输是实现并发请求的关键（最后的组装好像有独立的 stream 通道，实际发送过程并没有）。
+> 流：流是连接中的一个虚拟信道，可以承载双向的消息，每个流都有一个唯一的整数标识符（1、2…N）；消息：是指逻辑上的 HTTP 消息，比如请求、响应等，由一或多个帧组成；帧：HTTP 2.0 通信的最小单位，每个帧包含帧首部，至少也会标识出当前帧所属的流，承载着特定类型的数据，如 HTTP 首部、负荷，等等
