--- a/11_杂项/04_Interview/11.原型链及闭包.md
+++ b/11_杂项/04_Interview/11.原型链及闭包.md
@@ -157,3 +157,18 @@ for (var i = 0, i < 10, i++) {
 ```
 
 使其形成封闭的气泡，i 保持住了。
+
+- 应用3 
+
+`bind` 及函数柯里化的实现。
+
+```js
+function bind(fn, context) {
+  return function() {
+    // context 之所以能够保持，就是应用了闭包原理
+    // 也正是如此，所以绑定了函数的执行的环境
+    // 这里不 return 也会执行吧？
+    return fn.apply(context, arguments);
+  };
+}
+```
