promise 生成器分析

--- a/01_JavaScript/1_method/47.数据类型判断.md
+++ b/01_JavaScript/1_method/47.数据类型判断.md
@@ -71,4 +71,13 @@ console.log(
 );
 ```
 
+注意下面：
+
+```js
+Object.prototype.toString.call(Number.prototype); // Number
+Object.prototype.toString.call(Array.prototype); // Array
+```
+
+[Little known fact: Array.prototype itself is an Array](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/prototype)
+
 > 注意 substr 和 substring 区别
