nginx/console.log/async

--- a/09_Utilties/9_nginx/00.nginx重定向www和https.md
+++ b/09_Utilties/9_nginx/00.nginx重定向www和https.md
@@ -9,7 +9,7 @@
 
 - 方法 1
 
-```nginx
+```bash
 server
 {
 listen 80;
@@ -26,7 +26,7 @@ if ($host != 'www.test.com' ) {
 
 在配置文件里面写两个 server，第一个里面把不带 www 的域名去掉
 
-```nginx
+```bash
 server
  {
   listen       80;
@@ -35,7 +35,7 @@ server
 
 在配置文件的最下面添加上，这样就可以了。
 
-```nginx
+```bash
 server {
   server_name test.com;
   rewrite ^(.*) http://www.test.com/$1 permanent;
@@ -44,7 +44,7 @@ server {
 
 如果有多个不同的域名都绑定在同一个目录下不带 3W 的 301 到带 3W 的方法和上面的一样,在 vhost 的完整配制里后面加上:
 
-```nginx
+```bash
 server {
   server_name test1.com;
   rewrite ^(.*) http://www.test1.com$1 permanent;
