--- a/11_杂项/04_Interview/02.重写console.log.md
+++ b/11_杂项/04_Interview/02.重写console.log.md
@@ -12,15 +12,25 @@ ES6 解法：
 
 ```js
 // ES6 剩余参数
-console.log = (function (originLog) {
-  return function (...rest) {
-    if (!console.log.id) console.log.id = 0;
-    console.log.id += 1;  
+console.log = (originLog => (...args) => {
+  if (!console.log.id) console.log.id = 1;
 
-    rest.unshift(`${console.log.id}:`);
-    originLog.apply(console, rest);
-  };
+  args.unshift(`${console.log.id}:`);
+  originLog.apply(null, args);
+
+  console.log.id += 1;
 })(console.log);
+
+// 箭头函数节省代码
+// console.log = (function (originLog) {
+//   return function (...rest) {
+//     if (!console.log.id) console.log.id = 0;
+//     console.log.id += 1;  
+
+//     rest.unshift(`${console.log.id}:`);
+//     originLog.apply(console, rest);
+//   };
+// })(console.log);
 ```
 
 ES5 解法：
