--- a/11_杂项/04_Interview/02.重写console.log.md
+++ b/11_杂项/04_Interview/02.重写console.log.md
@@ -15,22 +15,20 @@ ES6 解法：
 console.log = (originLog => (...args) => {
   if (!console.log.id) console.log.id = 1;
 
-  args.unshift(`${console.log.id}:`);
+  args.unshift(`${console.log.id++}:`);
   originLog.apply(null, args);
 
-  console.log.id += 1;
+  // console.log.id += 1;
 })(console.log);
 
 // 箭头函数节省代码
-// console.log = (function (originLog) {
-//   return function (...rest) {
-//     if (!console.log.id) console.log.id = 0;
-//     console.log.id += 1;  
-
-//     rest.unshift(`${console.log.id}:`);
-//     originLog.apply(console, rest);
-//   };
-// })(console.log);
+console.log = (originLog => {
+  let n = 1;
+  return function (...rest) { 
+    rest.unshift(`${n++}:`);
+    originLog.apply(null, rest);
+  };
+})(console.log);
 ```
 
 ES5 解法：
