--- a/01_JavaScript/1_method/19.数组去重.md
+++ b/01_JavaScript/1_method/19.数组去重.md
@@ -3,7 +3,9 @@
 - ES6
 
 ```js
-[...new Set([1,2,3,1,'a',1,'a'])]
+var dd = arr => [...new Set(arr)];
+
+dd([1,2,3,1,'a',1,'a']);
 ```
 
 解释：作为ES6引入的新的集合类型，set 天生的里面没有重复元素，同时，又可以接收可迭代对象作为参数，返回一个新的 set 对象如果其中有重复元素，会自动去重（通过`Object.is()`方法判断是否相同）。然后通过 [spread operator](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Spread_operator) 将其展开为数组，从而实现去重的目的。
@@ -17,3 +19,31 @@
 ```
 
 解释：主要应用数组的 `indexOf()` 方法只会返回第一个匹配元素的索引值，从而达到去重的目的。
+
+```js
+var dd = function(arr) {
+  return arr.filter(function(el, index) {
+    return index === arr.indexOf(el);
+  })
+}
+
+dd([1,2,3,1,'a',1,'a']);
+```
+
+- 直接写，两层循环
+
+```js
+var dd = function(arr) {
+  for (var i = 0; i < arr.length; i++) {
+    for (var j = i + 1; j <= arr.length; j++) {
+      if (arr[i] === arr[j]) {
+        arr.splice(j, 1);
+      }
+    }
+  }
+
+  return arr;
+}
+
+dd([1,2,3,1,'a',1,'a']);
+```
