--- a/01_JavaScript/2_concept/21.构造函数和原型对象.md
+++ b/01_JavaScript/2_concept/21.构造函数和原型对象.md
@@ -1,8 +1,11 @@
 1. 任何函数都有一个`prototype`属性，该属性指向该函数的原型对象。   
 
-2. 原型对象又都有一个`constructor`属性，该属性值为指向该原型对象的`prototype`所属函数（一般就是构造函数了）。 
+2. 原型对象又都有一个`constructor`属性，该属性值为指向该原型对象的`prototype`所属函数（一般就是构造函数了）。
+
+这里要注意，只有默认的原型对象自带`constructor`属性，如果后期整个重写，需要手动指定，见下面代码：
 
 > 这个默认指向在原型对象重写后会改变，除非显式的指定，见下面的代码
+
 ```js
 function Person() {}
 
@@ -19,6 +22,47 @@ let p = new Person();
 console.log(p.constructor == Person); // false
 console.log(p.constructor == Object); // true
 ```
+
+手动指定 v1.0
+
+```js
+function Person() {}
+Person.prototype = {
+  constructor: Person,
+}
+
+var p = new Person();
+console.log(p.constructor == Person); // true
+
+Object.keys(Person.prototype); // 会找到 constructor，不应该找到
+```
+
+但这样还有个问题：
+
+函数默认原型对象上的 `constructor` 属性是不可枚举的，这是可使用 ES5 的方法指定属性描述符：
+
+```js
+Object.defineProperty(Person.prototype, 'constructor', {
+  value: Person,
+  // enumerable: false,
+})
+```
+
+`configurable`，`enumerable`，`writable` 默认都为 `false`。 所以，这个方法使用场景很少。
+
+此外还有，更少用了，一般自定义属性都是可枚举的，这样就要手动设置，好麻烦。
+
+```js
+Object.defineProperties(obj,{
+  p1: {
+    // descriptor
+  },
+  p2: {
+    // descriptor
+  },
+})
+```
+
 3. 如果函数作为原型函数调用（前面加`new`操作符），那么其原型对象会被实例共享。   
 
 4. 任何实例都有一个`[[Prototype]]`（注意首字母大写）内部属性，该属性值是一个引用，指向其构造函数的原型对象。   
