前端路由/vue响应式再理解

--- a/04_Framework_and_Lib/2_Vue/29.Vue原理分析/00.对MVC和MVVC的理解.md
+++ b/04_Framework_and_Lib/2_Vue/29.Vue原理分析/00.对MVC和MVVC的理解.md
@@ -10,7 +10,7 @@
 
 - M: model, 数据源, vue 中 data 对象（函数）；
 - V：View, 视图，vue 中 template
-- VC：viewModel，将 controller 替换为 viewModel，连接器。vue 中 script 中除了 data 的部分。
+- VM：viewModel，将 controller 替换为 viewModel，连接器。vue 中 script 中除了 data 的部分。
 
 可以实现数据和视图的完全分离：
 
