--- a/04_Framework_and_Lib/2_Vue/29.Vue原理分析/06.为什么不能通过访问数组下标实现响应式.md
+++ b/04_Framework_and_Lib/2_Vue/29.Vue原理分析/06.为什么不能通过访问数组下标实现响应式.md
@@ -1,6 +1,6 @@
 # 问题
 
-对象，如果属性没有声明，那不能 getter setter，所以，新添加的属性不是响应式。数据就有些麻烦了。
+对象，如果属性没有声明，那不能 getter setter，所以，新添加的属性不是响应式。数组就有些麻烦了。
 
 官方文档表述[注意事项](https://cn.vuejs.org/v2/guide/list.html#%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A1%B9)
 
