--- a/11_other/04_Interview/30.深复制.md
+++ b/11_other/04_Interview/30.深复制.md
@@ -4,10 +4,11 @@ function deepClone(source) {
     throw new Error('该数据不支持深复制');
   }
 
+  // 如果是 regExp 或者 date，直接在这里返回空对象了
   let target = source.constructor === Array ? [] : {};
 
   // 如果是 date，reg 等，他们的 keys 是空数组，所以，这里不执行
-  // 对应的 value 是 {}
+  // 对应的 value 是 {}，返回的 value 是上面
   Object.keys(source).forEach(key => {
     // typeof fn 返回的是 function 啊
     if (source[key] && typeof source[key] === 'object') {
