--- a/04_Framework_and_Lib/0_Framework_general_question/1.vue等框架如何做SEO.md
+++ b/04_Framework_and_Lib/0_Framework_general_question/1.vue等框架如何做SEO.md
@@ -23,3 +23,15 @@
 **少数既需要 SPA 强交互性，又对 SEO 和首屏速度有刚性需求的场景，这时候同构 SSR 就派上用场了**。
 
 参考：[用了 react 或者 vue，如何做 SEO 优化呢？-- 尤雨溪回答](https://www.zhihu.com/question/51949678)
+
+```js
+function escapeHTML(str) {
+  if (!str) return '';
+  str = str.replace(/</g, '&lt');
+  str = str.replace(/>/g, '&gt');
+  str = str.replace(/"/g, '&quto');
+  str = str.replace(/'/g, '&#39');
+
+  return str;
+}
+```
