--- a/11_other/04_Interview/23.性能优化.md
+++ b/11_other/04_Interview/23.性能优化.md
@@ -12,6 +12,10 @@
 <!-- 开启 https 默认关闭 a 标签 dns 预解析，这里手动开启 -->
 <meta http-equiv="x-dns-prefetch-control" content="on">
 
+
+<meta http-equiv="x-dns-prefetch-control" content="on">
+
+<link rel="dns-prefetch" href="url">
 <!-- 指定特定 url 进行 dns 预解析 -->
 <link rel="dns-prefetch" href="//prefetch-site">
 ```
