--- a/04_Framework_and_Lib/0_Framework_general_question/1.vue等框架如何做SEO.md
+++ b/04_Framework_and_Lib/0_Framework_general_question/1.vue等框架如何做SEO.md
@@ -24,14 +24,8 @@
 
 参考：[用了 react 或者 vue，如何做 SEO 优化呢？-- 尤雨溪回答](https://www.zhihu.com/question/51949678)
 
-```js
-function escapeHTML(str) {
-  if (!str) return '';
-  str = str.replace(/</g, '&lt');
-  str = str.replace(/>/g, '&gt');
-  str = str.replace(/"/g, '&quto');
-  str = str.replace(/'/g, '&#39');
+## 更简单的方法
 
-  return str;
-}
-```
+可以在 vue 根模版文件写冗余的代码共搜索引擎爬取，比如导航、网站地图、主要内容的文字，然后将他们设置为 `display: none`。
+
+不优雅，但很有效。 参考了 [追一](https://zhuiyi.ai/) 官网。
