--- a/01_JavaScript/2_concept/41.JavaScript中的模块化.md
+++ b/01_JavaScript/2_concept/41.JavaScript中的模块化.md
@@ -92,6 +92,20 @@ setTimeout(() => {
 4. 如果直接 `export` 变量，那么 `import` 的时候也要知道变量名；
 5. 为了方便，可以使用 `export default`，那么 `import` 的时候可以自定义名称。
 
+### 注意
+
+JS 引擎是在编译时处理 `import`，所以不支持动态加载：
+
+```js
+// 报错
+if (x === 2) {
+  import MyModual from './myModual';
+}
+```
+
+但 `require` 是支持的，所以，这也是不能完全用 ES6 module 代替 `require` 的一个原因。
+
 # 参考
 
 [CommonJS规范](http://javascript.ruanyifeng.com/nodejs/module.html)
+[Module 的语法](http://es6.ruanyifeng.com/#docs/module)
