--- a/04_Framework_and_Lib/2_Vue/29.Vue原理分析/03.vue双向数据绑定.md
+++ b/04_Framework_and_Lib/2_Vue/29.Vue原理分析/03.vue双向数据绑定.md
@@ -29,6 +29,8 @@ on: {
 2）双向绑定依赖 v-model，v-model 的作用是创建事件听器，将当前元素的值绑定到对应的 model 属性上，这样就实现了从 view 到 model 的数据传递；
 3）而 data 的改变，可以被 vue 监听到（通过 Object.defineProperty 实现），然后调用 updateComponent 组件，通过 rerender 函数 实现 view 的更新（updateComponent 实现了 vdom 的 patch 方法），从而实现了 model 到 view 的再次数据传递。
 
+> 实际要比这个复杂：就是如果 data 中的属性没有在模版中使用，那么不会走 get，没有走 get，set 的时候也不会关心。为了避免重复渲染，因为 set 会触发 updateComponent，及重复渲染。
+
 总上，实现了双向数据绑定。
 
 ## 问题
