--- a/04_Framework_and_Lib/2_Vue/29.Vue原理分析/02.vue如何实现响应式.md
+++ b/04_Framework_and_Lib/2_Vue/29.Vue原理分析/02.vue如何实现响应式.md
@@ -1,5 +1,9 @@
 # vue 如何实现响应式
 
+所谓响应式就是某个属性被访问及设置都会监听到。其实就是将模版中依赖的属性转换成访问器属性，并同时包含 `getter` 和 `setter` 函数。
+
+这里有点需要注意：并不是 data 上面所有的属性都变成响应式属性，有一个依赖收集的过程。
+
 关键函数：`Object.defineProperty`
 
 ## 定义
