js模块化在理解

--- a/01_JavaScript/2_concept/41.JavaScript中的模块化.md
+++ b/01_JavaScript/2_concept/41.JavaScript中的模块化.md
@@ -94,7 +94,9 @@ setTimeout(() => {
 
 ### 注意
 
-JS 引擎是在编译时处理 `import`，所以不支持动态加载：
+1. JS 引擎是在编译时处理 `import`，所以不支持动态加载：
+2. `import` 的花括号和对象解构赋值没有关系；
+3. `import` 有类似变量提升的过程，因为是在编译阶段处理模块之间关系。
 
 ```js
 // 报错
