--- a/11_other/04_Interview/35.JS 习题整理.md
+++ b/11_other/04_Interview/35.JS 习题整理.md
@@ -5,13 +5,21 @@ getNumberStr(false, 1, 'a', '2', 3, 4, 'b') 结果为 '1,2,3,4'
 ## 正则
 
 ```js
-var getNumberStr = (...args) => {
-  var tmp = args.filter(e => {
-    return /\d/.test(e);
+var a = [false, '1', 0, 3, 'b', '1.1', '1.sdsd'];
+
+function getStringNum() {
+  let args = Array.prototype.slice.call(arguments);
+
+  let tem = args.filter(e => {
+    // return typeof e !== 'boolean' && !Number.isNaN(Number(e));
+    return /^\d+.?\d*$/.test(e);
+    // return /\d/.test(e);
   })
 
-  return tmp.join();
+  return tem.join();
 }
+
+getStringNum(...a)
 ```
 
 ```js
@@ -121,5 +129,15 @@ console.log(f.b); // undefined
 ```
 
 函数的构造函数（Function）的原型和实例的原型链没有联系，和函数实例（F）的原型对象有关联。
+
+# 模拟字符串 trim
+
+```js
+function trimS(s) {
+  return s.replace(/^\s+|\s+$/g, '')
+}
+
+console.log( trimS("  foobar   ") );
+```
 
 
