vue 双向数据绑定

--- a/04_Framework_and_Lib/2_Vue/29.Vue原理分析/03.vue双向数据绑定.md
+++ b/04_Framework_and_Lib/2_Vue/29.Vue原理分析/03.vue双向数据绑定.md
@@ -2,6 +2,10 @@
 
 和实现响应式不同，响应式是实现双向数据绑定的基础。
 
+实现双向数据绑定的关键点在于 data 如何更新 view，因为 view 更新 data 其实可以通过事件监听即可，比如 input 标签监听 'input' 事件就可以实现了。所以我们着重来分析下，当数据改变，如何更新视图的。
+
+数据更新视图的重点是如何知道数据变了，只要知道数据变了，那么接下去的事都好处理。如何知道数据变了，其实上文我们已经给出答案了，就是通过 Object.defineProperty( )对属性设置一个 set 函数，当数据改变了就会来触发这个函数，所以我们只要将一些需要更新的方法放在这里面就可以实现 data 更新 view 了。
+
 ## view 通过事件更改 model 中的属性值
 
 这个有模版解析的过程：vue 中的 template 本质是字符串，里面含有逻辑，通过 render 函数解析为 vdom（含有各种逻辑的 JS 代码，处理 template 中指令 v-if, v-for, v-model、变量等；实现逻辑之后，还通过 js 渲染为 html）。
@@ -36,3 +40,7 @@ on: {
 ## 问题
 
 解析和渲染都通过 render 函数？
+
+## 参考资料
+
+[vue的双向绑定原理及实现](https://www.cnblogs.com/canfoo/p/6891868.html)
