--- a/11_other/04_Interview/35.JS 习题整理.md
+++ b/11_other/04_Interview/35.JS 习题整理.md
@@ -140,4 +140,27 @@ function trimS(s) {
 console.log( trimS("  foobar   ") );
 ```
 
+# 格式化金额数组方法
+
+```js
+function formatNum(n) {
+    const arr = n.toString().split('');
+    let count = 1,
+        tem = [],
+        len = arr.length;
+
+    // 细节不要出错
+    for (let i = len - 1; i >= 0; i--) {
+        tem.push(arr[i]);
+        // 处理开头的逗号
+        if (count % 3 === 0 && count !== len) {
+            tem.push(',');
+        }
+        count++;
+    }
+
+    // 不要忘记 reverse
+    return `$ ${tem.reverse().join('')}`;
+}
+```
 
