函数按值传递还是按引用

--- a/01_JavaScript/2_concept/43.函数传参按值传递还是按引用.md
+++ b/01_JavaScript/2_concept/43.函数传参按值传递还是按引用.md
@@ -1,19 +1,19 @@
 ```js
 var a = 1;
 function foo() {
-    console.log(a);
+    console.log(a); // 1
 };
 
 foo();
 
 (function() {
     var a = 2;
-    foo();
+    foo(); // 1
 })();
 
 (function (p) {
     var a = 2;
-    p();
+    p(); // 1
 })(foo);
 ```
 
