继承再理解

--- a/01_JavaScript/5_study/04_ES6&&ES7/04.继承与派生类.md
+++ b/01_JavaScript/5_study/04_ES6&&ES7/04.继承与派生类.md
@@ -18,10 +18,10 @@ function Square(width) {
   Rectangle.call(this, width, width);
 }
 
+// 关联父类原型对象的语法糖（既不是直接赋值，那样该子类影响父类，也不是获取它的副本）
 Square.prototype = Object.create(Rectangle.prototype, {
   constuctor: {
     value: Square,
-    enumerable: true,
     writable: true,
     configurable: true,
   }
@@ -32,6 +32,18 @@ let square = new Square(3);
 
 // 测试
 console.log(square.getArea()); // 9
+```
+
+`Object.create()` 实现：
+
+```js
+function object(o) {
+  function F() {};
+  F.prototype = o.prototype;
+
+  // 返回的实例，没有实例属性，但原型关联到了 o
+  return new F();
+} 
 ```
 
 - es6 语法
@@ -63,3 +75,19 @@ let square = new Square(2);
 // test
 console.log(square.getArea()); // 4
 ```
+
+几点说明：
+
+- 什么是继承：
+
+继承，记子类可以使用父类属性和方法的过程。所以，继承包含两个方便的含义：**一是继承父类的实例属性（和方法），二是继承父类的原型方法（和属性）**。
+
+- ES5 的实现总结
+
+借用构造函数实现实例属性继承，原型链的混成形式继承方法（不需要重新调用父类的构造函数，通过其他方法来得到父类原型的副本，即 `Object.create()`）
+
+- ES6 实现总结
+
+`extends` 关键词自动获取父类原型对象副本（背后也是 `Object.create()` 的技术）实现原型方法继承，在 `constructor` 中使用 `super` 关键词自动调用借用构造函数的过程实现属性继承。
+
+几个注意点： 1. 如果派生类中使用了 `constructor` 关键词，则，里面必须使用 `super` 不然报错，并且必须在使用 `this` 之前，不然也报错。如果直接不实用 `constructor`，构建实例时会自动调用，并传入所有参入到 `super` 中。 2. `super` 只能用于派生类中，不然也报错。
