深复制，js作用域查询再理解

--- a/01_JavaScript/2_concept/43.函数传参按值传递还是按引用.md
+++ b/01_JavaScript/2_concept/43.函数传参按值传递还是按引用.md
@@ -1,3 +1,7 @@
+## 函数参数按值传递
+
+按值传递及静态作用域。
+
 ```js
 var a = 1;
 function foo() {
@@ -13,8 +17,58 @@ foo();
 
 (function (p) {
     var a = 2;
+    // 证明传递的不是函数副本，因为给 p 添加属性影响外面
+    // 但也不是纯粹应用，因为直接覆盖不影响外面
+    // 叫做按共享传递，传递的是对象引用的副本
+    // var bar = function() {console.log(a)}
+    // bar();
     p(); // 1
 })(foo);
 ```
 
 对于基本类型，按值传递；对于引用类型，按共享传递，传递的是对象引用的副本，而非按值传递的对象副本或者按引用传递的对象隐式引用。
+
+## this 改变执行环境
+
+```js
+var a = 2;
+var o = {
+    a: 1,
+    fn() {
+        return this.a;
+    },
+}
+
+var foo = o.fn;
+o.fn(); // 1
+foo()； // 2 
+```
+
+这里，foo 和 bar 还是指向同一个引用，可以这样验证，之所以不同结果，是因为 `this`（类似动态作用域了）
+
+```js
+foo.name = 'foo';
+o.fn.name; // 'foo'
+```
+
+## 再看一个闭包
+
+```js
+function foo() {
+    const a = 111;
+    return function () {
+        console.log(a);
+    }
+}
+
+var bar = foo();
+var a = 222;
+foo()(); // 111
+
+// 静态作用域，哪定义，那查找
+bar(); // 111
+```
+
+## 总结
+
+本质上还是作用域查找的问题！`this` 比较特殊，结合函数按共享传递
