--- a/11_other/04_Interview/30.深复制.md
+++ b/11_other/04_Interview/30.深复制.md
@@ -1,25 +1,47 @@
 ```js
-function deepClone(source) {
-  if (!source && typeof source !== 'object') {
-    throw new Error('该数据不支持深复制');
+// function deepClone(source) {
+//   if (typeof source !== 'object' || !source) {
+//     throw new Error('该数据不支持深复制');
+//   }
+
+//   // 如果是 regExp 或者 date，直接在这里返回空对象了
+//   let target = source.constructor === Array ? [] : {};
+
+//   // 如果是 date，reg 等，他们的 keys 是空数组，所以，这里不执行
+//   // 对应的 value 是 {}，返回的 value 是上面
+//   Object.keys(source).forEach(key => {
+//     // typeof fn 返回的是 function 啊
+//     if (source[key] && typeof source[key] === 'object') {
+//       target[key] = source[key].constructor === Array ? [] : {};
+//       target[key] = deepClone(source[key]);
+//     } else {
+//       target[key] = source[key];
+//     }
+//   })
+
+//   return target;
+// }
+
+function deepClone(s) {
+  if (typeof s !== 'object' || !s) {
+    return s;
   }
 
-  // 如果是 regExp 或者 date，直接在这里返回空对象了
-  let target = source.constructor === Array ? [] : {};
+  // 这步判断有必要，因为后面 Object.keys 遍历时不区分数据对象
+  // date，正则没有 key，所以返回空对象
+  let t = Array.isArray(s) ? [] : {};
 
-  // 如果是 date，reg 等，他们的 keys 是空数组，所以，这里不执行
-  // 对应的 value 是 {}，返回的 value 是上面
-  Object.keys(source).forEach(key => {
-    // typeof fn 返回的是 function 啊
-    if (source[key] && typeof source[key] === 'object') {
-      target[key] = source[key].constructor === Array ? [] : {};
-      target[key] = deepClone(source[key]);
+  Object.keys(s).forEach(key => {
+    if (typeof s[key] === 'object' && s[key]) {
+      t[key] = Array.isArray(s) ? [] : {};
+      t[key] = deepClone(s[key]);
     } else {
-      target[key] = source[key];
+      // 如果是函数，直接复制引用
+      t[key] = s[key];
     }
-  })
+  });
 
-  return target;
+  return t;
 }
 
 var o1 = {
@@ -27,12 +49,12 @@ var o1 = {
   obj: {
     a: 111,
   },
+  a: 1,
   reg: /test/,
-  fun: function() {
-    return 1;
-  }
+  fn1: function() {
+    return this.a;
+  },
 }
 
 var o2 = deepClone(o1);
-
 ```
