function 及 原理链再理解

--- a/11_other/04_Interview/35.JS 习题整理.md
+++ b/11_other/04_Interview/35.JS 习题整理.md
@@ -126,9 +126,14 @@ Function.prototype.b = 22;
 var f = new F();
 console.log(f.a); // 11
 console.log(f.b); // undefined
+console.log(F.b); // 22
 ```
 
 函数的构造函数（Function）的原型和实例的原型链没有联系，和函数实例（F）的原型对象有关联。
+
+之所以这样是因为 js 定义如此：每当定义一个函数实例，会获取一个 `prototype` 属性，参与到对象实例的原型链中。这里要注意，函数实例也可以访问 `__proto__` 属性，这个属性指向 `Function.prototype`，然而，并没有什么卵用，因为 `Function.prototype` 不参与对象实例的原型链构建。但在 `Function.prototype` 添加的属性和方法可以通过函数本身访问，比如，polyfill `bind` 方法。
+
+就是函数比较特殊，其他（数组、数字等）没这个问题。
 
 # 模拟字符串 trim
 
