function 及 原理链再理解

--- a/11_other/04_Interview/35.JS 习题整理.md
+++ b/11_other/04_Interview/35.JS 习题整理.md
@@ -135,6 +135,19 @@ console.log(F.b); // 22
 
 就是函数比较特殊，其他（数组、数字等）没这个问题。
 
+在看下面：
+
+```js
+var Foo = function() {}
+var a = Foo.prototype;
+
+// 即 Foo.__proto__
+var b = Object.getPrototypeOf(Foo);
+console.log(a == b, b === Function.prototype);
+```
+
+反正就是函数实例有些特殊：本身具有 `prototype` 属性，参与对象实例的原型链；但作为实例本身也有 `__proto__`，即内部属性 `[[Prototype]]` 实现自己的原型继承，但这两个是完全不同的，前者才参与对象实例的原型链。
+
 # 模拟字符串 trim
 
 ```js
