--- a/11_other/04_Interview/35.JS 习题整理.md
+++ b/11_other/04_Interview/35.JS 习题整理.md
@@ -162,6 +162,29 @@ console.log( trimS("  foobar   ") );
 
 ```js
 function formatNum(n) {
+  let arr = n.toString().split('');
+  let len = arr.length,
+      tem = [],
+      count = 1;
+
+  for (let i = len - 1; i >= 0; i--) {
+    tem.push(arr[i]);
+    
+    console.log(count);
+    if (count % 3 === 0 && count !== len) {
+      tem.push(',');
+    }
+
+    count++;
+  }
+
+  return '$ ' + tem.reverse().join('');
+}
+formatNum(1123457);
+```
+
+```js
+function formatNum(n) {
     const arr = n.toString().split('');
     let count = 1,
         tem = [],
@@ -182,3 +205,18 @@ function formatNum(n) {
 }
 ```
 
+# 默认属性
+
+```js
+var a = {
+  name: 1,
+  b: function () {
+    this.name++;
+    return this.name;
+  }
+}
+
+console.log(a.b());
+var c = a.b;
+console.log(c());
+```
