--- a/11_other/04_Interview/00.需要重复练习的知识/00.排序之快排.md
+++ b/11_other/04_Interview/00.需要重复练习的知识/00.排序之快排.md
@@ -10,14 +10,7 @@
 
 ```js
 var quickSort = arr => {
-  // swap fn
-  const swap = (array, i, j) => {
-    const temp = array[i];
-    array[i] = array[j];
-    array[j] = temp;
-  };
-
-  // partition fn
+  // partition fn，这个是实际排序的过程
   const partition = (array, left, right) => {
     // 快排是原地排序，这里的 array 始终都是原始数组，left 和 right 会有变化
     const pivot = array[Math.floor((left + right) / 2)];
@@ -35,7 +28,8 @@ var quickSort = arr => {
       }
 
       if (l <= r) {
-        swap(array, l, r);
+        // swap(array, l, r);
+        [array[l], array[r]] = [array[r], array[l]];
         l++;
         r--;
       }
@@ -49,6 +43,7 @@ var quickSort = arr => {
   // recursive fn
   const quick = (array, left, right) => {
     let index;
+    console.log(array.length);
     if (array.length > 1) {
       index = partition(array, left, right);
 
