--- a/04_Framework_and_Lib/2_Vue/25.组件要不要写成vm的属性.md
+++ b/04_Framework_and_Lib/2_Vue/25.组件要不要写成vm的属性.md
@@ -1,6 +1,6 @@
 像是 elementUI，他们写的 Toast 和 Loading 等都是写了一个类，每次调用相当于创建一个实例。
 
-性能方面没有做对比，但这样在使用的时候不太直观：直接 `Toast` 使用，拿来的啊？并且注册为全局使用也不简单。
+性能方面没有做对比，但这样在使用的时候不太直观：直接 `Toast` 使用，哪来的啊？并且注册为全局使用也不简单。
 
 感觉比较好的是注册到 vm 实例上，调用的时候这样调用 `this.$toast()...` 这样更直观。
 
