--- a/04_Framework_and_Lib/2_Vue/23.vue 0-1 问题汇总.md
+++ b/04_Framework_and_Lib/2_Vue/23.vue 0-1 问题汇总.md
@@ -81,6 +81,8 @@ ERROR in Entry module not found: Error: Can't resolve '/Users/liuxiaoguang/work/
 
 子路由的 path 前面一定要加上父级路径名称，不然虽然可以跳转，但无法正常渲染：
 
+这里的 name 在传递 params 时是必须的。
+
 ```js
 routes: [
   {
