--- a/04_Framework_and_Lib/2_Vue/23.vue 0-1 问题汇总.md
+++ b/04_Framework_and_Lib/2_Vue/23.vue 0-1 问题汇总.md
@@ -67,7 +67,7 @@ new HtmlWebpackPlugin({
 ERROR in Entry module not found: Error: Can't resolve '/Users/liuxiaoguang/work/lansheng/project/gtdollar_web_oa/src/index.html' in '/Users/liuxiaoguang/work/lansheng/project/gtdollar_web_oa'
 ```
 
-很显然了，路径错了，index.html 直接在根目录，而不是 src 下面（看 log 啊）。
+很显然了，路径错了，index.html 直接在根目录，而不是 src 下面（看 log）。
 
 6.  获取屏幕宽度报错：
 
