--- a/04_Framework_and_Lib/2_Vue/29.Vue原理分析/04.全局组件和局部组件.md
+++ b/04_Framework_and_Lib/2_Vue/29.Vue原理分析/04.全局组件和局部组件.md
@@ -1,4 +1,4 @@
-组件在哪定义不重要，重要的是在哪注册：直接在 `vm` 上注册，那就是全局组件，任何自组件都能使用；在某个组件中注册的组件，则是局部组件，只能在注册的组件中使用。
+组件在哪定义不重要，重要的是在哪注册：直接在 `vm` 上注册，那就是全局组件，任何子组件都能使用；在某个组件中注册的组件，则是局部组件，只能在注册的组件中使用。
 
 ## 全局组件
 
