--- a/04_Framework_and_Lib/2_Vue/29.Vue原理分析/09.Vue 中属性能否重复声明.md
+++ b/04_Framework_and_Lib/2_Vue/29.Vue原理分析/09.Vue 中属性能否重复声明.md
@@ -1,6 +1,6 @@
 不可以。
 
-并且，data、computed、methods 中的属性名都不能重复，因为最终都会代理到 Vue 实例上（编程访问器属性）。
+并且，data、computed、methods 中的属性名都不能重复，因为最终都会代理到 Vue 实例上（变成访问器属性）。
 
 ```bash
 Method "test" has already been defined as a data property.
