react 属性初始化器语法进行事件绑定

--- a/04_Framework_and_Lib/1_react/08_learn_react/00.概览.md
+++ b/04_Framework_and_Lib/1_react/08_learn_react/00.概览.md
@@ -49,3 +49,23 @@ render() {
 }
 ```
 
+## 事件绑定
+
+推荐使用 使用属性初始化器语法绑定this(实验性)
+
+```js
+class Button extends React.Component {
+  handleClick=()=>{
+    console.log('this is:', this);
+  }
+  render() {
+    return (
+      <button onClick={this.handleClick}>
+        Click me
+      </button>
+    );
+  }
+}
+```
+
+参考：[React事件绑定的几种方式对比](https://segmentfault.com/a/1190000011317515)
