--- a/04_Framework_and_Lib/1_react/03.react数据传递之组件间通信.md
+++ b/04_Framework_and_Lib/1_react/03.react数据传递之组件间通信.md
@@ -4,7 +4,29 @@
 
 # 子传父
 
-通过 `props`，不过此时 `props` 的值为函数
+通过 `props`，不过此时 `props` 的值为函数。
+
+本质上是通过自定义事件完成的。这点 vue 代码实现更容易理解。
+
+```js
+// parent component
+handleQuestionAnswers = (answers) => {
+  this.setState({
+    answers: answers
+  })
+}
+
+<QuestionList getQuestionListAnswers={this.handleQuestionAnswers}/>
+```
+
+```js
+// child component
+sendAnswersToParent(answer) {
+  this.props.getQuestionListAnswers(answer)
+}
+```
+
+子组件可以通过 `props` 访问到 `getQuestionListAnswers`，调用时在父组件中可以触发对应的函数（通过赋值实际实现为一个函数）。
 
 > vue 和 react 在这点上很像
 
