--- a/11_other/08_architect/01.部署相关.md
+++ b/11_other/08_architect/01.部署相关.md
@@ -21,3 +21,11 @@ aws cloudfront create-invalidation --distribution-id $CLOUDFRONT_ID --paths /din
 ## 自定义域名
 
 carmel domain，s3 不支持直接关联域名（但可以使用亚马逊提供的域名），如果要，需要经过 cloudfront，这就涉及到前文提到的 cloudfront 的缓存问题。
+
+## ECS 
+
+相比 S3，可以进行系统安装，分配 ip 等。
+
+## CI/CD
+
+已知可以尝试使用的工具有 circleCI, Jenkins。其中 Jenkins 更加灵活，但 circleCI 和 github 集成更友好。
