--- a/09_Utilties/3_webpack/06.webpack4介绍及配置多页面应用.md
+++ b/09_Utilties/3_webpack/06.webpack4介绍及配置多页面应用.md
@@ -25,7 +25,7 @@ module.exports = {
 };
 ```
 
-`mode` 选项推荐在 npm scripts 中设置，然后 webpack 配置文件氛围 dev 和 pro 两种，如：
+`mode` 选项推荐在 npm scripts 中设置，然后 webpack 配置文件分为 dev 和 pro 两种，如：
 
 ```json
 "build": "webpack --mode=production",
@@ -53,7 +53,7 @@ yarn add mini-css-extract-plugin -D
 ```
 
 > 注意，`mini-css-extract-plugin` 只适合 webpack4+，同时，为了避免更改 css 引起 js
-> chunkhash 的改变，webpack4 之后都建议用 `contenthash` 代替 `hash` 和 `contenthash`了。  
+> chunkhash 的改变，webpack4 之后都建议用 `contenthash` 代替 `hash` 和 `chunkhash`了。  
 > 参考这两个 issue：
 > [Use contenthash over hash and chunkhash for better long term caching](https://github.com/webpack/webpack.js.org/issues/2096),
 > [chunkhash changes if style is changed even if style is completely removed by ExtractTextPlugin](https://github.com/webpack/webpack/issues/672)
