git 配置多账户

--- a/07_Git/12.git配置多账号.md
+++ b/07_Git/12.git配置多账号.md
@@ -1,1 +1,16 @@
 git 生成公钥时添加默认邮箱，不然，需要在后面注明是哪个邮箱。
+
+配置完成后 clone 需要在 url 上注明哪个身份：
+
+```bash
+git@github.com-xgliu:xiaogliu/pure_swiper.git
+```
+
+这里的 `-xgliu` 不影响 url 定位，是 github 识别用户的标志。
+
+或者后期更改 remote url，不然会报权限错误：
+
+```bash
+ERROR: Permission to xiaogliu/pure_swiper.git denied to vincexiaoguangliu.
+fatal: Could not read from remote repository.
+```
