--- a/04_Framework_and_Lib/1_react/11.相对路径问题.md
+++ b/04_Framework_and_Lib/1_react/11.相对路径问题.md
@@ -1,3 +1,5 @@
 1. static 引用相对路径可以在 package.json 中配置 `homepage`
 
 2. 而如果服务器端没有配置，使用 browserHistory 硬刷新会失败，这时候使用 hashHistory 解决（问题：难看。但在 android 中没所谓了，看不到）。
+
+参考：[关于react 在打包后：“找不到资源路径”的问题、部署到服务器二级目录 “打开为空白” 的问题](https://blog.csdn.net/Sophie_U/article/details/80006723)
