--- a/09_Utilties/11_chrome devtools/00.纵览.md
+++ b/09_Utilties/11_chrome devtools/00.纵览.md
@@ -3,3 +3,20 @@
 3. 页面滚动懒加载
 4. 减少 TTFB，如果服务器性能不好，但开启了 gzip，会增加 TTFB 时间。[这些奇技淫巧，助你优化前端应用性能](https://juejin.im/entry/58e42a1961ff4b006b2e3057)
 
+- 本地 gzip 然后上传到 s3 上，因为不能重命名（s3 上不能选择压缩文件），所以思路是将文件 gzip，但不改变文件名。
+
+1) gzip 只能做一件事，但，可以 gzip 之后再重命名， `find folderName -type f -exec gzip -9 {} \; -exec mv {}.gz {} \;`
+
+> 这里最后的分号必须
+
+2) 再 s3 上批量更改文件类型改变的文件的 metadata。
+
+`aws s3 cp s3://$BUCKET/static/js s3://$BUCKET/static/js --recursive --metadata-directive REPLACE --content-type gzip`
+
+参考：
+
+[aws cp](https://docs.aws.amazon.com/cli/latest/reference/s3/cp.html)   
+[Bash script: Gzip an entire folder and keep files extensions same [closed]](https://stackoverflow.com/questions/13184303/bash-script-gzip-an-entire-folder-and-keep-files-extensions-same)   
+[How to serve Gziped webpack bundles from AWS S3](https://stackoverflow.com/questions/32584761/how-to-serve-gziped-webpack-bundles-from-aws-s3)   
+
+
