--- a/07_Git/01.git常用命令.md
+++ b/07_Git/01.git常用命令.md
@@ -71,7 +71,10 @@ add 文件后，commit 前，可以进行两部操作：1，将某个状态为 s
 # staged --> unstaged and remain changes
 git reset HEAD <filename>
 
-# discard changes
+# 或者这样做，直接 reset 不加任何参数
+git reset
+
+# 然后接着discard changes
 git checkout -- <filename>
 ```
 
