--- a/11_other/10_reading/01.深入理解 ES6.md
+++ b/11_other/10_reading/01.深入理解 ES6.md
@@ -1,3 +1,3 @@
 深入理解ES6
 
-1. Js中的异步：异步是通过Js中的任务队列进行维护的，那和事件循环什么关系，以及宏任务微任务的关系？四种，1,事件，实际是订阅一个事件，事件触发时调用（但执行时的上下文与定义时相同，如果时涉及到 this，就要注意啦），但没法处理错误，且不灵活；2.回调，回调函数也不是立即执行，而是等到任务完成时先推到任务队列，然后等待执行；3.promise，承诺在将来执行，实际是在 promise 构造函数中执行了 resolve(fullfill) 或者 reject (reject) 函数，如果自己改造请求对象，要自己写着两个函数，这里涉及到微任务。4.async-await，待整理。
+1. Js中的异步：异步是通过Js中的 Message 队列 和 Job 队列进行维护的，那和事件循环什么关系，以及宏任务微任务的关系？（答：一次事件循环表示清空一次call stack（[调用栈](https://flaviocopes.com/javascript-event-loop/)），清空 call stack 的同时会将当前 call stack 中的 Job queue 全执行完，此时一个事件循环结束。从 message queue 中拿取其他函数，再进行新一轮的事件循环）四种，1,事件，实际是订阅一个事件，事件触发时调用（但执行时的上下文与定义时相同，如果时涉及到 this，就要注意啦），但没法处理错误，且不灵活；2.回调，回调函数也不是立即执行，而是等到任务完成时先推到任务队列，然后等待执行；3.promise，承诺在将来会给结果，实际是在 promise 构造函数中执行了 resolve(fullfill) 或者 reject (reject) 函数，如果自己改造请求对象，要自己写着两个函数，这里涉及到微任务。4.async-await，当函数前面加 await 时，这个函数会停止执行，直到 promise 被解决再返回结果，这里注意的是，await 后面跟的是一个 promise，如果是函数，那就要返回 promise（当然也可以直接写），另外，await 的宿主函数前面要加 async。
