--- a/11_other/10_reading/02.JavaScript 忍者秘籍.md
+++ b/11_other/10_reading/02.JavaScript 忍者秘籍.md
@@ -1,1 +1,2 @@
 1. 事件循环：1）一个事件循环只能执行一个 mocrotask，且当前 task 执行时不能被打断；2）事件循环最开始从主线程开始，执行到异步任务，把异步任务放到任务队列，其中包括宏任务和微任务；3）异步任务由浏览器或js其他运行环境单独开线程维护；4）setTimeout 只是到了指定时间将任务推到异步队列，并不是说指定时间后执行，看前面的代码执行多久。
+2. setInterval 每间隔一定时间将回调放到任务队列一次，但有例外：如果之前的任务执行时间太长，当前时间间隔到期后还没执行完，那不会有新的回调放入任务队列，相同时间的间隔的 setInterval 回调创建一个。
