change mac host

--- a/09_Utilties/5_OS/2_Mac/03.hosts文件.md
+++ b/09_Utilties/5_OS/2_Mac/03.hosts文件.md
@@ -3,3 +3,24 @@
 ```bash
 cat /etc/hosts
 ```
+
+添加假域名
+
+The reason is that Apple has apparently decided you must put your own entries at the top. So you must do this instead:192.168.1.15 balabala.com
+```js
+##
+# Host Database
+#
+# localhost is used to configure the loopback interface
+# when the system is booting. Do not change this entry.
+##
+127.0.0.1 localhost
+255.255.255.255 broadcasthost
+::1 localhost
+```
+Remember to use Stack Overflow instead of Zhihu dude.
+
+作者：Leo Zhang
+链接：https://www.zhihu.com/question/20577387/answer/98684211
+来源：知乎
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
