python auto buy

--- a/08_Python/07.自动抢票.md
+++ b/08_Python/07.自动抢票.md
@@ -1,3 +1,10 @@
+## 环境准备
+
+1. python
+2. chrome webdriver，[下载地址](http://chromedriver.storage.googleapis.com/index.html)。解压后放在目录 `/usr/local/bin`，如果没有权限放在 `/user/local/bin` 中貌似也可以
+
+## 代码
+
 ```py
 from selenium import webdriver
 # from time import sleep
@@ -17,8 +24,9 @@ if __name__ == '__main__':
     button = driver.find_element_by_class_name('css-ezh792')
     print(button, 1111)
     # Interact with elements
-    button.click()
-
-
-    
+    button.click()  
 ```
+
+参考：
+[手把手｜100行Python代码自动抢火车票！（包教包会）](https://zhuanlan.zhihu.com/p/32995516)   
+[2018 Mac 安装Chromedriver及配置](https://blog.csdn.net/ywj_486/article/details/80940087)
