git delete remote branche

--- a/07_Git/01.git常用命令.md
+++ b/07_Git/01.git常用命令.md
@@ -108,3 +108,9 @@ git reset --hard <commit-hash>
 ```
 
 > 注意：带上 `--hard` 参数会将本地未提交的记录全部删除，这个时不可恢复的。（虽然 commit 也会删除，但在一定时间内还是可以恢复的。）
+
+## 删除远程分支
+
+```bash
+git push origin --delete <branchName>
+```
