--- a/07_Git/01.git常用命令.md
+++ b/07_Git/01.git常用命令.md
@@ -114,3 +114,5 @@ git reset --hard <commit-hash>
 ```bash
 git push origin --delete <branchName>
 ```
+
+> 远程分支可以存在缓存，通过 `git remote prune origin` or `git fetch -p` 清楚
